--- a/about.html
+++ b/about.html
@@ -60,108 +60,117 @@
             <div class="days-row" id="days-row">
               <tr>
                 <td>
-                  <button class="days" onclick="myFunction_1()">1</button>
+                  <button class="days d1" onclick="myFunction_1()">1</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">2</button>
+                  <button class="days d2" onclick="myFunction_1()">2</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">3</button>
+                  <button class="days d3" onclick="myFunction_1()">3</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">4</button>
+                  <button class="days d4" onclick="myFunction_1()">4</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">5</button>
+                  <button class="days d5" onclick="myFunction_1()">5</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">6</button>
+                  <button class="days d6" onclick="myFunction_1()">6</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">7</button>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <button class="days" onclick="myFunction_1()">8</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">9</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">10</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">11</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">12</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">13</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">14</button>
+                  <button class="days d7" onclick="myFunction_1()">7</button>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <button class="days" onclick="myFunction_1()">15</button>
+                  <button class="days d8" onclick="myFunction_1()">8</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">16</button>
+                  <button class="days d9" onclick="myFunction_1()">9</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">17</button>
+                  <button class="days d10" onclick="myFunction_1()">10</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">18</button>
+                  <button class="days d11" onclick="myFunction_1()">11</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">19</button>
+                  <button class="days d12" onclick="myFunction_1()">12</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">20</button>
+                  <button class="days d13" onclick="myFunction_1()">13</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">21</button>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <button class="days" onclick="myFunction_1()">22</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">23</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">24</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">25</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">26</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">27</button>
-                </td>
-                <td>
-                  <button class="days" onclick="myFunction_1()">28</button>
+                  <button class="days d14" onclick="myFunction_1()">14</button>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <button class="days" onclick="myFunction_1()">29</button>
+                  <button class="days d15" onclick="myFunction_1()">15</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">29</button>
+                  <button class="days d16" onclick="myFunction_1()">16</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">30</button>
+                  <button class="days d17" onclick="myFunction_1()">17</button>
                 </td>
                 <td>
-                  <button class="days" onclick="myFunction_1()">31</button>
+                  <button class="days d18" onclick="myFunction_1()">18</button>
+                </td>
+                <td>
+                  <button class="days d19" onclick="myFunction_1()">19</button>
+                </td>
+                <td>
+                  <button class="days d20" onclick="myFunction_1()">20</button>
+                </td>
+                <td>
+                  <button class="days d21" onclick="myFunction_1()">21</button>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <button class="days d22" onclick="myFunction_1()">22</button>
+                </td>
+                <td>
+                  <button class="days d23" onclick="myFunction_1()">23</button>
+                </td>
+                <td>
+                  <button class="days d24" onclick="myFunction_1()">24</button>
+                </td>
+                <td>
+                  <button class="days d25" onclick="myFunction_1()">25</button>
+                </td>
+                <td>
+                  <button class="days d26" onclick="myFunction_1()">26</button>
+                </td>
+                <td>
+                  <button class="days d27" onclick="myFunction_1()">27</button>
+                </td>
+                <td>
+                  <button class="days d28" onclick="myFunction_1()">28</button>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <button class="days d29" onclick="myFunction_1()">29</button>
+                </td>
+                <td>
+                  <button class="days d30" onclick="myFunction_1()">30</button>
+                </td>
+                <td>
+                  <button class="days d31" onclick="myFunction_1()">31</button>
+                </td>
+                <td>
+                  <button class="days d32" onclick="myFunction_1()"></button>
+                </td>
+                <td>
+                  <button class="days d33" onclick="myFunction_1()"></button>
+                </td>
+                <td>
+                  <button class="days d34" onclick="myFunction_1()"></button>
+                </td>
+                <td>
+                  <button class="days d35" onclick="myFunction_1()"></button>
                 </td>
               </tr>
             </div>
