--- a/calendar.html
+++ b/calendar.html
@@ -79,30 +79,30 @@
               <td>
                 <div class="days_big" id="d1" onclick="myFunction()">
                   1
-                  <div id="paoloCirc"></div>
-                  <div id="ashleyCirc"></div>
-                  <div id="hudaCirc"></div>
-                  <div id="amberdeenCirc"></div>
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
                 </div>
               </td>
               <td><div class="days_big" id="d2" onclick="myFunction()">2</div></td>
               <td><div class="days_big" id="d3" onclick="myFunction()">3</div></td>
               <td><div class="days_big" id="d4" onclick="myFunction()">4</div></td>
               <td><div class="days_big" id="d5" onclick="myFunction()">5
-                <div id="paoloCirc"></div>
-                <div id="ashleyCirc"></div>
-                <div id="hudaCirc"></div>
-                <div id="amberdeenCirc"></div>
+                <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
               </div></td>
               <td><div class="days_big" id="d6" onclick="myFunction()">6</div></td>
               <td><div class="days_big" id="d7" onclick="myFunction()">7</div></td>
             </tr>
             <tr>
               <td><div class="days_big" id="d8" onclick="myFunction()">8
-                <div id="paoloCirc"></div>
-                <div id="ashleyCirc"></div>
-                <div id="hudaCirc"></div>
-                <div id="amberdeenCirc"></div>
+                <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
               </div></td>
               <td><div class="days_big" id="d9" onclick="myFunction()">9</div></td>
               <td><div class="days_big" id="d10" onclick="myFunction()">10</div></td>
