--- a/calendar.html
+++ b/calendar.html
@@ -79,76 +79,253 @@
               <td>
                 <div class="days_big" id="d1" onclick="myFunction()">
                   1
+                <div class="test">
                   <div class="circ" id="paoloCirc"></div>
                   <div class="circ" id="ashleyCirc"></div>
                   <div class="circ" id="hudaCirc"></div>
                   <div class="circ" id="amberdeenCirc"></div>
                 </div>
+                </div>
               </td>
-              <td><div class="days_big" id="d2" onclick="myFunction()">2</div></td>
-              <td><div class="days_big" id="d3" onclick="myFunction()">3</div></td>
-              <td><div class="days_big" id="d4" onclick="myFunction()">4</div></td>
-              <td><div class="days_big" id="d5" onclick="myFunction()">5
-                <div class="circ" id="paoloCirc"></div>
+              <td><div class="days_big" id="d2" onclick="myFunction()">2
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
                   <div class="circ" id="ashleyCirc"></div>
                   <div class="circ" id="hudaCirc"></div>
                   <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d3" onclick="myFunction()">3
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d4" onclick="myFunction()">4
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d5" onclick="myFunction()">5
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div>
               </div></td>
-              <td><div class="days_big" id="d6" onclick="myFunction()">6</div></td>
-              <td><div class="days_big" id="d7" onclick="myFunction()">7</div></td>
+              <td><div class="days_big" id="d6" onclick="myFunction()">6
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d7" onclick="myFunction()">7
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
             </tr>
             <tr>
               <td><div class="days_big" id="d8" onclick="myFunction()">8
-                <div class="circ" id="paoloCirc"></div>
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
                   <div class="circ" id="ashleyCirc"></div>
                   <div class="circ" id="hudaCirc"></div>
                   <div class="circ" id="amberdeenCirc"></div>
+                </div>
               </div></td>
-              <td><div class="days_big" id="d9" onclick="myFunction()">9</div></td>
-              <td><div class="days_big" id="d10" onclick="myFunction()">10</div></td>
-              <td><div class="days_big" id="d11" onclick="myFunction()">11</div></td>
-              <td><div class="days_big" id="d12" onclick="myFunction()">12</div></td>
-              <td><div class="days_big" id="d13" onclick="myFunction()">13</div></td>
-              <td><div class="days_big" id="d14" onclick="myFunction()">14</div></td>
+              <td><div class="days_big" id="d9" onclick="myFunction()">9
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d10" onclick="myFunction()">10
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d11" onclick="myFunction()">11
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d12" onclick="myFunction()">12
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d13" onclick="myFunction()">13
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d14" onclick="myFunction()">14 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+            </tr>
+            <tr > 
+              <td><div class="days_big" id="d15" onclick="myFunction()">15
+                <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div></td>
+              <td><div class="days_big" id="d16" onclick="myFunction()">16 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d17" onclick="myFunction()">17 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d18" onclick="myFunction()">18 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d19" onclick="myFunction()">19 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d20" onclick="myFunction()">20 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d21" onclick="myFunction()">21 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
             </tr>
             <tr>
-              <td><div class="days_big" id="d15" onclick="myFunction()">15</div></td>
-              <td><div class="days_big" id="d16" onclick="myFunction()">16</div></td>
-              <td><div class="days_big" id="d17" onclick="myFunction()">17</div></td>
-              <td><div class="days_big" id="d18" onclick="myFunction()">18</div></td>
-              <td><div class="days_big" id="d19" onclick="myFunction()">19</div></td>
-              <td><div class="days_big" id="d20" onclick="myFunction()">20</div></td>
-              <td><div class="days_big" id="d21" onclick="myFunction()">21</div></td>
+              <td><div class="days_big" id="d22" onclick="myFunction()">22 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d23" onclick="myFunction()">23 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d24" onclick="myFunction()">24 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d25" onclick="myFunction()">25 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d26" onclick="myFunction()">26 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d27" onclick="myFunction()">27 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
+              <td><div class="days_big" id="d28" onclick="myFunction()">28 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
             </tr>
             <tr>
-              <td><div class="days_big" id="d22" onclick="myFunction()">22</div></td>
-              <td><div class="days_big" id="d23" onclick="myFunction()">23</div></td>
-              <td><div class="days_big" id="d24" onclick="myFunction()">24</div></td>
-              <td><div class="days_big" id="d25" onclick="myFunction()">25</div></td>
-              <td><div class="days_big" id="d26" onclick="myFunction()">26</div></td>
-              <td><div class="days_big" id="d27" onclick="myFunction()">27</div></td>
-              <td><div class="days_big" id="d28" onclick="myFunction()">28</div></td>
-            </tr>
-            <tr>
-              <td><div class="d29 days_big" id="d29" onclick="myFunction()">29</div></td>
+              <td><div class="d29 days_big" id="d29" onclick="myFunction()">29 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div></div></td>
               
-              <td><div class="days_big" id="d30" onclick="myFunction()">30
+              <td><div class="days_big" id="d30" onclick="myFunction()">30 <div class="test">
+                <div class="circ" id="paoloCirc"></div>
+                <div class="circ" id="ashleyCirc"></div>
+                <div class="circ" id="hudaCirc"></div>
+                <div class="circ" id="amberdeenCirc"></div>
+              </div>
               </div>
               </td>
               <td>
-                <div class="days_big" id="d31" onclick="myFunction()">31</div>
+                <div class="days_big" id="d31" onclick="myFunction()">31 <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div>
               </td>
               <td>
-                <div class="days_big" id="d32" onclick="myFunction()">32</div>
+                <div class="days_big" id="d32" onclick="myFunction()">32 <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div>
               </td>
               <td>
-                <div class="days_big" id="d33" onclick="myFunction()">33</div>
+                <div class="days_big" id="d33" onclick="myFunction()">33 <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div>
               </td>
               <td>
-                <div class="days_big" id="d34" onclick="myFunction()">34</div>
+                <div class="days_big" id="d34" onclick="myFunction()">34 <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div>
               </td>
               <td>
-                <div class="days_big" id="d35" onclick="myFunction()">35</div>
+                <div class="days_big" id="d35" onclick="myFunction()">35  <div class="test">
+                  <div class="circ" id="paoloCirc"></div>
+                  <div class="circ" id="ashleyCirc"></div>
+                  <div class="circ" id="hudaCirc"></div>
+                  <div class="circ" id="amberdeenCirc"></div>
+                </div></div>
               </td>
               
             </tr>
