--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="logo.png" alt="logo" class="logo" />
       <a href="login.html" class="active">Login</a>
       <a href="index.html">Sign Up</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="icon" onclick="myFunction_3()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
@@ -59,7 +59,7 @@
           </select>
         </div>
         <div id="fourth-row" class="row">
-          <button>Sign Up</button>
+          <button><a class="sign-up-link" href="about.html">Sign Up</a></button>
         </div>
       </form>
     </div>
@@ -112,6 +112,10 @@
           team. WhenRUFree allows people across all different devices and
           timezones to coordinate and effectively schedule critical meetings.
         </p>
+        <video width="400" controls>
+          <source src="about us video.mp4" type="video/mp4" />
+          Your browser does not support HTML video
+        </video>
         <h2>Meet the Team</h2>
         <ul>
           <li>
