--- a/calendar.html
+++ b/calendar.html
@@ -78,7 +78,7 @@
             <!--<div class="days-row" id="days-row">-->
             <tr class="day-group">
               <td>
-<<<<<<< HEAD
+
                 <div class="days_big"  onclick="myFunction()">
                   <span id="d1"></span> 
                   <div class= circDown>
@@ -495,8 +495,8 @@
                     <div class="circAmberdeen"></div>
                     </div>
                 </div>
-=======
-                <div class="days_big" id="d1" onclick="myFunction()">
+
+                <!-- <div class="days_big" id="d1" onclick="myFunction()">
                   1
                 <div class="test">
                   <div class="circ" id="circPaolo"></div>
@@ -744,8 +744,8 @@
                   <div class="circ" id="circAshley"></div>
                   <div class="circ" id="circHuda"></div>
                   <div class="circ" id="circAmberdeen"></div>
-                </div></div>
->>>>>>> e894d2ac7651da35ce7281c34810b1e963c8338a
+                </div></div> -->
+
               </td>
               
             </tr>
