--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
           <option>12:00PM</option>
         </select>
         <div class="actions">
-          <button class="save" id="save">
+          <button class="save" id="save" onclick="closeFunction_1()">
             Save <i class="fasfa-check"></i>
           </button>
           <button class="dismiss" id="dismiss" onclick="closeFunction_1()">
