fixed hamburger menus login and index.html

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
   </head>
 
   <header>
-    <div class="topnav" id="myTopnav">
+    <div class="topnav">
       <img src="logo.png" alt="logo" class="logo" />
-      <a href="login.html" class="active">Login</a>
-      <a href="index.html">Sign Up</a>
+      <div id="myLinks">
+        <a href="login.html" class="active">Login</a>
+        <a href="index.html">Sign Up</a>
+      </div>
       <a href="javascript:void(0);" class="icon" onclick="myFunction_3()">
-        <i class="fa fa-bars"></i>
-      </a>
+        <i class="fa fa-bars"></i
+      ></a>
     </div>
   </header>
   <body>
@@ -80,7 +82,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js"></script>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
   </body>
 </html>
 
