--- a/login.html
+++ b/login.html
@@ -2,16 +2,24 @@
 <html>
   <head>
     <title>Login</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="styleMODAL.css" />
+    <link href="style.css" rel="stylesheet" />
     <meta charset="utf-8" />
   </head>
   <header>
-    <<header>
-      <div class="topnav" id="myTopnav">
-        <img src="logo.png" alt="logo" class="logo" />
+    <div class="topnav" id="myTopnav">
+      <img src="logo.png" alt="logo" class="logo" />
+      <div id="myLinks">
         <a href="login.html" class="active">Login</a>
         <a href="index.html">Sign Up</a>
-      </nav>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction_3()">
+        <i class="fa fa-bars"></i
+      ></a>
     </div>
   </header>
   <body>
