add calss ctrlbtnName to calendar.html

--- a/calendar.html
+++ b/calendar.html
@@ -24,13 +24,13 @@
     </div>
     <div class="user-key-container">
         <div class="user-key ctrlBtnPaolo" id="red"></div>
-        <label>Paolo</label>
+        <label class="ctrlBtnPaolo">Paolo</label>
         <div class="user-key ctrlBtnHuda" id="blue"></div>
-        <label>Huda</label>
+        <label class="ctrlBtnHuda">Huda</label>
         <div class="user-key ctrlBtnAshley" id="purple"></div>
-        <label>Ashley</label>
+        <label class="ctrlBtnAshley">Ashley</label>
         <div class="user-key ctrlBtnAmberdeen" id="green"></div>
-        <label>Ambareen</label>   
+        <label class="ctrlBtnAmberdeen">Ambareen</label>   
     </div>
     <div class="big-calender-container" id="big-container">
       <div class="big-calender" id="big-calender">
